commit of a definitely working build