@@ -121,13 +121,6 @@
 							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
-					<!-- Тимчасово не компілюємо старий TDLib-код -->
-					<excludes>
-						<exclude>**/tdlib/**</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 
